add [id] routes and test run
