# app/api/v1/booking/route.ts
@@ -1,15 +1,37 @@
-// app/api/v?/compagnies/route.ts
+// app/api/v?/booking/route.ts
 
 import { NextRequest, NextResponse } from "next/server";
 import { PrismaClient } from "@prisma/client";
 import { checkDatabase } from "../../../utils/connectDB";
-import { auth } from "@/auth";
+import { protectRoute } from "@/lib/auth"; 
+
 const prisma = new PrismaClient();
+   /* TO PROTECT ROUTE ADD
+  const token = await protectRoute(req);
+  if (token instanceof Response) { return token;  }
+  */
  
 /* ######## Collection variable ########## */
   const collection = "reservation"; 
   const response = "booking";
   const id_collection = "id_reservation"
+
+/*-------------------------- GET ---------------------------------*/
+export async function GET(req: NextRequest) {
+  const dbCheck = checkDatabase();
+
+  if (dbCheck) return dbCheck;
+
+  try {
+    const data = await prisma[collection].findMany();
+    return NextResponse.json({ [response]: data ?? [] });
+  } catch (error) {
+    return NextResponse.json(
+      { error: `Failed to fetch ${collection}` },
+      { status: 500 }
+    );
+  }
+}
 
 /*-------------------------- POST ---------------------------------*/
 export async function POST(req: NextRequest) {
@@ -25,23 +47,6 @@ export async function POST(req: NextRequest) {
   } catch (error) {
     return NextResponse.json(
       { error: `Failed to create ${collection}` },
-      { status: 500 }
-    );
-  }
-}
-
-/*-------------------------- GET ---------------------------------*/
-export async function GET(req: NextRequest) {
-  const dbCheck = checkDatabase();
-
-  if (dbCheck) return dbCheck;
-
-  try {
-    const data = await prisma[collection].findMany();
-    return NextResponse.json({ [response]: data ?? [] });
-  } catch (error) {
-    return NextResponse.json(
-      { error: `Failed to fetch ${collection}` },
       { status: 500 }
     );
   }
